Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/syntax/6318240/BarNeg1a.out
BarNeg1a.java:9:36: compiler.err.cant.select.static.class.from.param.type
1 error
